<resources>

    <string name="app_name">Trips</string>
    <string name="cadastro">Não possui cadastro? Registre-se</string>
    <string name="Login">Login</string>
    <string name="password">Senha</string>
    <string name="email">Email</string>
    <string name="Slogan">LocalDex</string>
    <string name="Registrar">Registrar</string>
    <string name="frase_de_cadastro">Vamos Começar</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="bem_vindo">Bem Vindo !</string>
    <string name="Adicione_um_lugar">Adicione Um Lugar</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="salvar">Salvar</string>
    <string name="dataCadastro">Data de Cadastro</string>
    <string name="title_activity_maps">Map</string>
    <string name="voltar">Voltar</string>
    <string name="todo">TODO</string>
    <string name="seus_lugares">Lugares Visitados</string>

</resources>