<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/fraseDoCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:textColor="@android:color/black"
        android:text="@string/bem_vindo"
        android:textAlignment="center"
        android:fontFamily="cursive"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/nomeEditText"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="56dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:hint="@string/email"
        android:imeOptions="actionDone"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/fraseDoCadastro"
        />

    <EditText
        android:id="@+id/senhaEditText"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="18dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/nomeEditText"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:text="@string/Login"
        android:onClick="irParaMain"
        android:background="@drawable/btn_login"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/senhaEditText"
        />


</androidx.constraintlayout.widget.ConstraintLayout>