<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroUsuarioActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"/>

    
    <ImageView
        android:id="@+id/page_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/register_icon"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
       />
    
    <TextView
        android:id="@+id/fraseDoCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:textColor="@android:color/black"
        android:text="@string/frase_de_cadastro"
        android:textAlignment="center"
        android:fontFamily="cursive"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/page_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/nomeEditText"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="56dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:hint="@string/nome"
        android:imeOptions="actionDone"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/fraseDoCadastro"
        />

    <EditText
        android:id="@+id/emailEditText"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="18dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:hint="@string/email"
        android:imeOptions="actionDone"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/nomeEditText"
        />
    <EditText
        android:id="@+id/senhaEditText"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="18dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:hint="@string/senha"
        android:imeOptions="actionDone"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:text="@string/Registrar"
        android:onClick="criarNovoUsuario"
        android:background="@drawable/btn_login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>